# atlcli

./: .gitignore  MANIFEST.in  contribute.md  environment.sh  license.md  maintainers.md  pyproject.toml  readme.md
atlassiancli/: __init__.py  __main__.py  readme.md
bitbucket/: create_branches.py  create_pr.py  create_tags.py  delete_branches.py  delete_pr.py  filter_branches.py  filter_merged.py  filter_pr.py  functions.py  get_branches.py  get_branches_or_tags.py  get_clone_urls.py  get_commit_details.py  get_commits.py  get_file_content.py  get_file_details.py  get_file_names.py  get_file_urls.py  get_pr.py  get_pr_details.py  get_pr_diff.py  get_pr_files.py  get_projects.py  get_repos.py  get_tags.py  get_users.py  merge_pr.py  put_pr.py  readme.md
bitbucketscripts/: Bitbucket server command line interface.pptx  create-branches.py  create-pr.py  create-tags.py  delete-branches.py  delete-pr.py  filter-branches.py  filter-merged.py  filter-pr.py  get-branches-or-tags.py  get-branches.py  get-clone-urls.py  get-commit-details.py  get-commits.py  get-file-content.py  get-file-details.py  get-file-names.py  get-file-urls.py  get-pr-details.py  get-pr-diff.py  get-pr-files.py  get-pr.py  get-projects.py  get-repos.py  get-tags.py  get-users.py  merge-pr.py  put-pr.py
jira/: create_subtask.py  functions.py  get_boards.py  get_issue.py  get_issues.py  get_jprojects.py  get_subtasks.py  readme.md
jira-tests/: issue.json  subtask.json
jirascripts/: create-subtask.py  get-boards.py  get-issue.py  get-issues.py  get-jprojects.py  get-subtasks.py
shared/: arguments.py  (+10 more)
(+125 files in other folders)
